--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@project-serum/anchor",
-  "version": "0.3.1-beta.3",
+  "name": "@ccai/anchor",
+  "version": "0.3.1-beta.2",
   "description": "Anchor client",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -19,8 +19,7 @@
     "watch": "tsc -p tsconfig.cjs.json --watch",
     "test:unit": "jest test/unit",
     "test:integration": "jest test/integration --detectOpenHandles",
-    "coverage": "jest --coverage test/unit",
-    "prepublishOnly": "yarn build"
+    "coverage": "jest --coverage test/unit"
   },
   "dependencies": {
     "@project-serum/borsh": "^0.1.0",
@@ -41,23 +40,17 @@
     "snake-case": "^3.0.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@types/jest": "^26.0.15",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
-    "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "husky": "^4.3.0",
-    "jest": "26.6.0",
-    "jest-config": "26.6.0",
     "lint-staged": "^10.5.0",
     "prettier": "^2.1.2",
-    "ts-jest": "^26.4.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
   "peerDependencies": {
     "@solana/web3.js": "^0.86.1"
+  },
+  "resolutions": {
+    "ws": "7.4.6"
   }
 }
